@@ -257,7 +257,7 @@ public:
     * @return NULL - Thread is not in global table
     * @return NonNull - Ptr to the thread that we are running within
     */
-   static BaseThread* self (void);
+   static Thread* self (void);
 
    /**
     * Yields execution of the calling thread to allow a different blocked
